# developer-templates

./: readme.md
data/: mock_data.csv
go/: readme.md
go/etl/: readme.md
go/examples/: readme.md
go/examples/channel-buffering/: channel-buffering.go
go/examples/channels/: channels.go
go/examples/hello/: hello.go
go/examples/values/: values.go
go/go_docker/: Dockerfile  main.go  readme.md
go/go_server/: main.go
go/go_server/static/: form.html
go/movies_crud/: main.go  readme.md
init/: init_aws.sh  init_azure.sh  init_conda.sh  init_cpp.sh  init_golang.sh  init_java17.sh  init_kotlin.sh  init_kubectl.sh  init_mssql_drivers.sh  init_nasm.sh  init_net.sh  init_nodejs.sh  init_opencl.sh  init_powershell.sh  init_python.sh  init_r.sh  init_ruby.sh  init_scala.sh  init_spark.sh  init_terraform.sh  mnt_sas_shared.sh
rust/: readme.md
rust/api_demo/: Cargo.toml
rust/api_demo/src/: main.rs
rust/guessing_game/src/: main.rs
rust/iris/: Cargo.toml  readme.md
rust/iris/src/: main.rs
rust/read_csv/: readme.md
rust/struct_example/src/: main.rs
rust/threads/src/: main.rs
unit_test/: customer.py  test_customer.py
