[package]
name = "api_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# https://stackoverflow.com/questions/14154753/how-do-i-make-an-http-request-from-rust?rq=3

[dependencies]
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }