[package]
name = "iris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

plotters = { version = "^0.3.0", default_features = false, features = ["evcxr", "all_series", "all_elements"] }
polars = {version = "0.28.0", features = ["describe", "lazy", "ndarray"]}
color-eyre = "0.6.2"
ndarray = "0.15.6"
smartcore = "0.3.1"
